--- a/css/style.css
+++ b/css/style.css
@@ -116,9 +116,21 @@ margin-bottom: 10px;
 	font-size: 20px;
   font-weight: normal;
 }
+
+
 .about p{
 	font-size:22px;
 }
+
+.caption p{
+  padding-top: 10px;
+  padding-left: 40px;
+  font-size: 16px;
+  font-style: italic;
+  font-family: Avenir, sans-serif;
+  clear: both;
+  color: #CFCFCF;
+} 
 
 .clippings-section{
 	padding-top: 50px;
